--- a/Higi.Middleware.API/packages.config
+++ b/Higi.Middleware.API/packages.config
@@ -7,5 +7,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.7" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="WindowsAzure.ServiceBus" version="4.0.0" targetFramework="net452" />
 </packages>
