Complete web job trigger and fetch user health data

--- a/Higi.UI/Higi.UI.csproj
+++ b/Higi.UI/Higi.UI.csproj
@@ -116,6 +116,12 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Higi.Middleware.Common\Higi.Middleware.Common.csproj">
+      <Project>{69DE8E8A-4722-46E3-A96F-9C134A6CAA60}</Project>
+      <Name>Higi.Middleware.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
