--- a/Higi.Middleware.API/Higi.Middleware.API.csproj
+++ b/Higi.Middleware.API/Higi.Middleware.API.csproj
@@ -43,6 +43,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -128,6 +136,10 @@
     <ProjectReference Include="..\Higi.Middleware.Common\Higi.Middleware.Common.csproj">
       <Project>{69de8e8a-4722-46e3-a96f-9c134a6caa60}</Project>
       <Name>Higi.Middleware.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Higi.Middleware.Data\Higi.Middleware.Data.csproj">
+      <Project>{360e018d-e192-432b-aacf-d1a7c497d7af}</Project>
+      <Name>Higi.Middleware.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
