--- a/Higi.Middleware.Common/Higi.Middleware.Common.csproj
+++ b/Higi.Middleware.Common/Higi.Middleware.Common.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserDataUpdateMessage.cs" />
+    <Compile Include="UserDataUpdateStatus.cs" />
     <Compile Include="UserHealthData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
