--- a/Higi.Middleware.Data/App.Config
+++ b/Higi.Middleware.Data/App.Config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SampleHigiMiddlewareDBEntities" connectionString="metadata=res://*/HMWDataModel.csdl|res://*/HMWDataModel.ssdl|res://*/HMWDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SampleHigiMiddlewareDB;user id=sa;password=Welcome@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SampleHigiMiddlewareDBEntities" connectionString="metadata=res://*/HMWDataModel.csdl|res://*/HMWDataModel.ssdl|res://*/HMWDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SampleHigiMiddlewareDB;user id=sa;password=Welcome@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SampleHigiMiddlewareDBEntities" connectionString="metadata=res://*/HMWDataModel.csdl|res://*/HMWDataModel.ssdl|res://*/HMWDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ggku3ser2;initial catalog=HigiMiddleware;user id=sa;password=Welcome@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
