--- a/Higi.Middleware.Data/Higi.Middleware.Data.csproj
+++ b/Higi.Middleware.Data/Higi.Middleware.Data.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientRequestResponse.cs">
+      <DependentUpon>HMWDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="HigiRequestResponse.cs">
+      <DependentUpon>HMWDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Higi_Client_Mappings.cs">
       <DependentUpon>HMWDataModel.tt</DependentUpon>
     </Compile>
@@ -70,6 +76,9 @@
       <DependentUpon>HMWDataModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueMessageStatu.cs">
+      <DependentUpon>HMWDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Target.cs">
       <DependentUpon>HMWDataModel.tt</DependentUpon>
     </Compile>
